--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
         "@heroicons/vue": "^2.0.18",
         "@tailwindcss/forms": "^0.5.7",
         "@vitejs/plugin-vue": "^5.0.4",
+        "@vueuse/core": "^10.7.0",
         "autoprefixer": "^10.4.16",
         "axios": "^1.6.4",
         "dayjs": "^1.11.10",
         "laravel-vite-plugin": "^1.0.0",
+        "pinia": "^2.1.7",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
         "vite": "^5.0.10",
         "vue": "^3.4.0",
-        "vue-router": "^4.2.5",
-        "pinia": "^2.1.7",
-        "@vueuse/core": "^10.7.0"
+        "vue-router": "^4.2.5"
+    },
+    "dependencies": {
+        "@vimeo/player": "^2.29.7"
     }
 }
